# pyCombiner

./: .pypirc  0.2.0TODO  MANIFEST.in  pyproject.toml  readme.md  readme.rst  requirements.txt  setup.py  todolist.md
PyCombiner2/: inline_imports.py  locate_module.py  merger.py  parse_import_line.py
examples/Project2/batches/: inspect_all_table.py
examples/demo_complicate/: runMeCom.py  utils.py
examples/demo_complicate/CombineOutput/: runMeCom20221112_183523.py
examples/demo_simple/: update.py
examples/realProject1/: realTest.py
examples/realProject1/CombineOutput/: realTest20221128_142250.py  realTest20221128_142819.py
examples/realProject1/core/: config.py  debugPrint.py  getScoreData.py  main.py  shtDataCalc.py  shtOperation.py  userParamsProcess.py  utils.py
exe(demo)/: terminal20221205_102818.py
pyCombiner/: __init__.py  __main__.py  inline_imports.py  lineParse.py  locate_module.py  main.py  osFileOpr.py  parseCore.py  parse_import_line.py  pyCombiner.py  readme.rst  terminal.py  terminal.spec  utils.py
pyCombiner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pyCombiner/depend/: __init__.py  findOri.py
pyCombiner/echos/: colorfulPrint.py  echo.py  print_tree.py
src/: __init__.py  lineParse.py  main.py  osFileOpr.py  parseCore.py  pyCombiner.py
src/output/: runMeSim.py
test/: __init__.py  importLineTest.py  importParseTest.py
test/app/: __init__.py  app.py
tests/: test_inline_imports.py  test_locate_module.py  test_main.py  test_parse_import_line.py
tests/examples/deep_demo/: main.py  module1.py
(+24 files in other folders)
